fix(core/ui/tabs): having gap in fullscreen on macOS

--- a/packages/core/src/ui/ribbon/workspace-ribbon.scss
+++ b/packages/core/src/ui/ribbon/workspace-ribbon.scss
@@ -67,6 +67,9 @@
   .html-for-mac & {
     padding-top: 28px;
   }
+  .html-for-mac.typora-fullscreen {
+    padding-top: 0;
+  }
 
   .typora-node.megamenu-opened &,
   .typora-node.typora-sourceview-on &,
